# Detectron2_ros

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: detectron2_ros.launch
msg/: Result.msg
src/: detectron2_ros
