<?xml version="1.0"?>
<package format="2">
  <name>detectron2_ros</name>
  <version>0.1.0</version>
  <description>The detectron2_ros package</description>

  <maintainer email="davfercha@uma.es">David Fernandez Chaves</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/DavidFernandezChaves/Detectron2_ros</url>

  <author email="davfercha@uma.es">David Fernandez Chaves</author>
  <author>David Fernandez Chaves</author>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>


  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
